--- a/index.html
+++ b/index.html
@@ -4,16 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>to-do App</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
-<body class="bg-dark">
-    <h1 class="text-center text-white">To-Do App</h1>
-    <input class="mx-auto d-block" type="text" placeholder="Enter To-Do" class="input">
-    <!-- <button>Add To-Do</button> -->
-    <div>
-
+<body>
+    <div class="container">
+        <div class="head">
+            <h1 style="font-family: Roboto, sans-serif;font-weight: 500;font-style: normal;font-size: 25px;">Website todo</h1>
+            <i class="fa-solid fa fa-pen-clip"></i>
+        </div>
+        <div class="main">
+            <div class="list">
+                <h2 style="color: #6e7189;font-family: Roboto, sans-serif;font-weight: 400;font-style: normal;font-size: 23px;">Hello World</h2>
+                <div class="icons">
+                    <div>
+                        <i class="fa-solid fa-1 fa-pen-to-square"></i>
+                    </div>
+                    <div>
+                        <i class="fa-solid fa-2 fa-trash"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    <!-- <script src="app.js"></script> -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/e686848577.js" crossorigin="anonymous"></script>
 </body>
 </html>
