--- a/index.html
+++ b/index.html
@@ -12,23 +12,18 @@
 <body>
     <div class="container">
         <div class="head">
-            <h1 style="font-family: Roboto, sans-serif;font-weight: 500;font-style: normal;font-size: 25px;">Website todo</h1>
+            <h1 style="font-family: Roboto, sans-serif;font-weight: 500;font-style: normal;font-size: 25px;">To-do App</h1>
             <i class="fa-solid fa fa-pen-clip"></i>
         </div>
+        <div class="search-box">
+            <button onclick="addTodo()" class="btn-search"><i class="fa-solid fa fa-plus"></i></button>
+            <input type="text" class="input-search input" placeholder="Add to-do">
+        </div>
         <div class="main">
-            <div class="list">
-                <h2 style="color: #6e7189;font-family: Roboto, sans-serif;font-weight: 400;font-style: normal;font-size: 23px;">Hello World</h2>
-                <div class="icons">
-                    <div>
-                        <i class="fa-solid fa-1 fa-pen-to-square"></i>
-                    </div>
-                    <div>
-                        <i class="fa-solid fa-2 fa-trash"></i>
-                    </div>
-                </div>
-            </div>
+            
         </div>
     </div>
+    <script src="app.js"></script>
     <script src="https://kit.fontawesome.com/e686848577.js" crossorigin="anonymous"></script>
 </body>
 </html>
