--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
             <i class="fa-solid fa fa-pen-clip"></i>
         </div>
         <div class="search animate__animated animate__slideInUp">
-            <input class="input" placeholder="Enter to-do..." type="text">
-            <button  onclick="addTodo()" type="submit">Add</button>
+            <form id="form">
+                <input class="input" placeholder="Enter to-do..." type="text" required>
+                <button type="submit">Add</button>
+            </form>
           </div>
         <div class="main">
             
